# value-stream-simulator

./: LICENSE  README.md  pyproject.toml  requirements.txt  value-stream.code-workspace
.github/agents/: Reviewer.agent.md
.github/workflows/: ci.yml
src/examples/: demo.py  tutorial.ipynb
src/value_stream/: __init__.py  assignment_strategy.py  developer.py  event_status.py  model.py  sdlc_workflow.py  simulation.py  simulation_policy.py  simulation_result.py  support_workflow.py  task.py  task_event.py  task_history.py  toolchain.py  workflow_state.py  workflow_state_name.py
src/value_stream/managers/: __init__.py  developer_manager.py  manager.py  qa_manager.py  toolchain_manager.py
src/value_stream/resources/: __init__.py  developer.py  qa_tester.py  resource.py  resource_operator.py  resource_pool.py  toolchain.py
src/value_stream/utils/: __init__.py  developer_factory.py  factory.py  generator_utils.py  model_factory.py  result_viewer.py  task_factory.py  (+1 more)
tests/: test_developer.py  test_developer_factory.py  test_developer_manager.py  test_developer_team.py  test_manager.py  test_model.py  test_model_factory.py  test_qa_manager.py  test_qa_tester.py  test_qa_tester_pool.py  test_resource.py  test_resource_operator.py  test_result_viewer.py  test_simulation.py  test_simulation_policy.py  test_simulation_result.py  test_support_task.py  test_support_workflow.py  test_task.py  test_task_factory.py  test_task_generator.py  test_task_history.py  test_toolchain.py  test_toolchain_manager.py  test_toolchain_pool.py  test_toolchain_scheduler.py  test_workflow_state.py
