[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/value_stream"]

[project]
name = "value_stream"
version = "0.0.1"
requires-python = ">=3.9"
authors = [
    {name="Brian Vetter", email="bvetter@gmail.com"},
]

description = "Conduct software delivery simulations to identify inefficiencies that cause delay and lost value."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
